Tighten reporting and migration handling